fix some page spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -230,6 +230,10 @@ nav a:hover {
     padding: 5px 0;
 }
 
+.page-tag-home {
+    margin: 0;
+}
+
 .page h1 {
     font-family: 'jellyka_-_le_grand_sautRg';
     letter-spacing: 4px;
@@ -238,8 +242,8 @@ nav a:hover {
 
 .home-text {
     font-family: 'jellyka_-_le_grand_sautRg';
-    text-align: center;
-    margin: -10% 28% 0 -18%;
+    margin: -10% 28% 0 0;
+    min-width: 174px; 
 }
 
 .album-text {
@@ -249,6 +253,7 @@ font-size: 32px;
 .artist-text {
 font-size: 42px;
 margin-top: -14px;
+margin-left: 15px; 
 }
 
 .listen-buttons {
@@ -393,8 +398,7 @@ margin-top: -14px;
 
     .home-text {
     font-family: 'jellyka_-_le_grand_sautRg';
-    text-align: center;
-    margin: -4% 0 0 -47%;
+    margin: -4% 0 0 0;
     }
 
     .album-text {
@@ -403,7 +407,7 @@ margin-top: -14px;
 
     .artist-text {
         margin-top: -50px;
-        margin-left: -8%;
+        margin-left: 70px;
         font-size: 52px;
     }
 
@@ -523,9 +527,7 @@ margin-top: -14px;
     }
 
     .home-text {
-    font-family: 'jellyka_-_le_grand_sautRg';
-    text-align: center;
-    margin: 0 0 0 -57%;
+        margin-left: 3%;
     }
 
     .album-text {
@@ -534,7 +536,7 @@ margin-top: -14px;
 
     .artist-text {
         margin-top: -20px;
-        margin-left: -2%;
+        margin-left: 70px;
         font-size: 52px;
     }
 
@@ -608,9 +610,7 @@ margin-top: -14px;
     }
 
     .home-text {
-        font-family: 'jellyka_-_le_grand_sautRg';
-        text-align: center;
-        margin: 0 0 0 -57%;
+        margin-left: 5%;
     }
 
     .album-text {
@@ -619,7 +619,7 @@ margin-top: -14px;
 
     .artist-text {
         margin-top: -20px;
-        margin-left: -2%;
+        margin-left: 70px;
         font-size: 52px;
     }
 
